# claude-native-oauth

./: .gitignore  AGENTS.md  CREATE-PR.md  INSTALL.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: How-It-Works.md  User-Guide.md
docs/adr/: 001-direct-post-over-cli.md  002-single-file-production-module.md  003-score-through-wrapper.md  004-typed-exception-hierarchy.md  005-configurable-retries.md  006-opus-4-7-sampling-parameters.md
scripts/: check_imports.py  score_repo.py
tests/: __init__.py  conftest.py  helpers.py  test_main.py  test_score_repo.py  test_smoke.py
