[project]
name = "claude-native-oauth"
version = "0.2.2"
description = "Direct Anthropic Messages API access using Claude Code OAuth tokens."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0,<2",
  "pytest>=8.3.0,<9",
  "pytest-cov>=5.0.0,<6",
  "ruff>=0.11.0,<0.12",
  "types-requests>=2.32.0.20250328,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.hatch.build.targets.sdist]
include = [
  "main.py",
  "README.md",
  "INSTALL.md",
  "CREATE-PR.md",
  "AGENTS.md",
  "Makefile",
  "docs",
  "scripts",
  "tests",
]

[tool.pytest.ini_options]
addopts = "-q --cov=main --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["main.py", "tests", "scripts"]
